$Id: History,v 1.75 2001-04-02 14:29:21 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 02, 2001 G.Cosmo (global-V03-00-09)
- G4UnitsTable.cc: resolved ambiguity of old/new style iostream for
  formatting in G4UnitsTable::operator<<.
 
March 09, 2001 G.Cosmo (global-V03-00-08)
- Tyde up comments.
- Added patch to G4PhysicsTable::Store/Retrieve methods for non-ISO setup
  where 'binary' streams are not implemented. Binary mode is allowed only
  with ISO setup (native-STL).
- Removed 'virtual' specifier from Retrieve (...) methods in G4PhysicsVector
  derived classes.
- Fixed bug in constructor of G4PhysicsLnVector:
  added initialisation of 'dataVector' to zero (H.Kurasige).

March 09, 2001 H.Kurasige
- Added Store/RetrievePhysicsTable methods (G4PhysicsTable).
- Added Store/Retrieve and GetType methods (G4PhysicsVector and related).
- Introduced G4PhysicsVectorType class (enumeration).
- Added unit test PhysicsTableTest.cc.

March 06, 2001 G.Cosmo (global-V03-00-07)
- Completed migration to STL vector for all classes in "global/management"
  o Migrated G4UnitsTable
  o Migrated G4StateManager

March 05, 2001 G.Cosmo (global-V03-00-06)
- Added new unit 'parsec' to SystemOfUnits.h (M.Maire).