@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4PhysicsTable.icc,v 1.2 2001-03-05 09:31:32 gcosmo Exp $
+// $Id: G4PhysicsTable.icc,v 1.3 2001-04-03 07:26:38 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -51,7 +51,7 @@ inline
 {
   G4PhysicsTableIterator itr=begin();
   for (size_t i=0; i<idx; ++i) itr++;
-  G4std::vector<G4PhysicsVector*>::insert(itr, pvec);
+  G4PhysCollection::insert(itr, pvec);
 }
 
 inline
